OCaml 4.10.1 (20 August 2020)
-----------------------------

### Runtime system:

- #9344, #9368: Disable exception backtraces in bytecode programs
  built with "-output-complete-exe". At the moment, such programs do
  not embed debug information and exception backtraces where causing
  them to crash.
  (Jérémie Dimino, review by Nicolás Ojeda Bär)

### Build system:

- #9531: fix support for the BFD library on FreeBSD
  (Hannes Mehnert, review by Gabriel Scherer and David Allsopp)

### Bug fixes:

- #9068, #9437: ocamlopt -output-complete-obj failure on FreeBSD 12
  (Xavier Leroy, report by Hannes Mehnert, review by Sébastien Hinderer)

- #9165, #9840: Add missing -function-sections flag in Makefiles.
  (Greta Yorsh, review by David Allsopp)

- #9495: fix a bug where bytecode binaries compiled with `-output-complete-exe`
  would not execute `at_exit` hooks at program termination (in particular,
  output channels would not be flushed).
  (Nicolás Ojeda Bär, review by David Allsopp)

- #9714, #9724: Use the C++ alignas keyword when compiling in C++ in MSVC.
  Fixes a bug with MSVC C++ 2015 onwards.
  (Antonin Décimo, review by David Allsopp and Xavier Leroy)

- #9736, #9749: Compaction must start in a heap where all free blocks are
  blue, which was not the case with the best-fit allocator.
  (Damien Doligez, report and review by Leo White)

### Tools:

- #9552: restore ocamloptp build and installation
  (Florian Angeletti, review by David Allsopp and Xavier Leroy)

OCaml 4.10.0 (21 February 2020)
-------------------------------

(Changes that can break existing programs are marked with a "*")

### Language features

- #7757, #1726: multi-indices for extended indexing operators:
  `a.%{0;1;2}` desugars to `( .%{ ;.. } ) a [|0;1;2|]`
  (Florian Angeletti, review by Gabriel Radanne)

* #1859, #9117: enforce safe (immutable) strings by removing
  the -unsafe-string option by default. This can be overridden by
  a configure-time option (available since 4.04 in 2016):