@@ -1,3 +1,12 @@
+Working version
+---------------
+
+### Build system:
+
+- #9938, #9939: Define __USE_MINGW_ANSI_STDIO=0 for the mingw-w64 ports to
+  prevent their C99-compliant snprintf conflicting with ours.
+  (David Allsopp, report by Michael Soegtrop, review by Xavier Leroy)
+
 OCaml 4.10.1 (20 August 2020)
 -----------------------------
 
